restructured project